--- a/ipadress.html
+++ b/ipadress.html
@@ -25,8 +25,14 @@
         </div>
 
         <div class="content">
-            <h1>Welcome To My Website</h1>
-            <p>TAIGA S.M.P</p>
+            <h1>
+                IP ADRESS
+            </h1>
+
+            <p>
+                [0WNER] PrinceParshia<dl>
+                [Member's] RisanOP, NotGamerTreet, Valorantboy89
+            </p>
         </div>
     </body>
 </html>
